--- a/pwsafe/MainPage.xaml
+++ b/pwsafe/MainPage.xaml
@@ -22,14 +22,14 @@
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
-                <Grid x:Name="gridHeaderGroup" Grid.Column="0" Margin="1">
-                    <TextBlock x:Uid="txtHeaderGroup" FontSize="15" FontWeight="Bold" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="10,0,0,0" />
-                </Grid>
-                <Grid x:Name="gridHeaderTitle" Grid.Column="1" Margin="1">
+                <Grid x:Name="gridHeaderTitle" Grid.Column="0" Margin="1">
                     <TextBlock x:Uid="txtHeaderTitle" FontSize="15" FontWeight="Bold" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="10,0,0,0" />
                 </Grid>
-                <Grid x:Name="gridHeaderUser" Grid.Column="2" Margin="1">
+                <Grid x:Name="gridHeaderUser" Grid.Column="1" Margin="1">
                     <TextBlock x:Uid="txtHeaderUser" FontSize="15" FontWeight="Bold" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="10,0,0,0" />
+                </Grid>
+                <Grid x:Name="gridHeaderPassword" Grid.Column="2" Margin="1">
+                    <TextBlock x:Uid="txtHeaderPassword" FontSize="15" FontWeight="Bold" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="10,0,0,0" />
                 </Grid>
             </Grid>
             <ListView Grid.Row="1" ItemsSource="{x:Bind ItemEntries}">
@@ -62,13 +62,13 @@
                                 <ColumnDefinition Width="*"/>
                             </Grid.ColumnDefinitions>
                             <Grid Margin="1,0">
-                                <TextBlock Text="{x:Bind Group}" FontSize="20" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="10,0,0,0" />
-                            </Grid>
-                            <Grid Grid.Column="1" Margin="1,0">
                                 <TextBlock Text="{x:Bind Title}" FontSize="20" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="10,0,0,0" />
                             </Grid>
-                            <Grid Grid.Column="2" Margin="1,0">
+                            <Grid Grid.Column="1" Margin="1,0">
                                 <TextBlock Text="{x:Bind User}" FontSize="20" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="10,0,0,0" />
+                            </Grid>
+                            <Grid Grid.Column="2" Margin="1,0">
+                                <TextBlock Text="{x:Bind Password}" FontSize="20" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="10,0,0,0" />
                             </Grid>
                         </Grid>
                     </DataTemplate>
