Added Item detail page

--- a/pwsafe/MainPage.xaml
+++ b/pwsafe/MainPage.xaml
@@ -147,7 +147,7 @@
                     <TextBlock x:Uid="txtHeaderUser" FontSize="15" FontWeight="Bold" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="10,0,0,0" />
                 </Grid>
             </Grid>
-            <ListView x:Name="lvItems" Grid.Row="1" ItemsSource="{x:Bind ItemEntries}" RightTapped="lvItems_RightTapped" Holding="lvItems_Holding">
+            <ListView x:Name="lvItems" Grid.Row="1" ItemsSource="{x:Bind ItemEntries}" IsItemClickEnabled="True" ItemClick="lvItems_ItemClick" RightTapped="lvItems_RightTapped" Holding="lvItems_Holding">
                 <ListView.ItemContainerStyle>
                     <Style TargetType="ListViewItem">
                         <Setter Property="FontFamily" Value="{ThemeResource ContentControlThemeFontFamily}" />
