--- a/pwsafe/MainPage.xaml
+++ b/pwsafe/MainPage.xaml
@@ -123,6 +123,7 @@
             <ToggleMenuFlyoutItem x:Uid="menuCopyUsername" Tag="&#xE13D;" Height="48" MinWidth="150" Style="{StaticResource IconMenuFlyoutItemStyle}" Click="btnCopyUsername_Click" />
             <ToggleMenuFlyoutItem x:Uid="menuCopyPassword" Tag="&#xE192;" Height="48" MinWidth="150" Style="{StaticResource IconMenuFlyoutItemStyle}" Click="btnCopyPassword_Click" />
         </MenuFlyout>
+        <CollectionViewSource x:Name="cvsLetters" IsSourceGrouped="True" ItemsPath="Items" />
     </Page.Resources>
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
@@ -147,44 +148,103 @@
                     <TextBlock x:Uid="txtHeaderUser" FontSize="15" FontWeight="Bold" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="10,0,0,0" />
                 </Grid>
             </Grid>
-            <ListView x:Name="lvItems" Grid.Row="1" ItemsSource="{x:Bind ItemEntries}" IsItemClickEnabled="True" ItemClick="lvItems_ItemClick" RightTapped="lvItems_RightTapped" Holding="lvItems_Holding">
-                <ListView.ItemContainerStyle>
-                    <Style TargetType="ListViewItem">
-                        <Setter Property="FontFamily" Value="{ThemeResource ContentControlThemeFontFamily}" />
-                        <Setter Property="FontSize" Value="{ThemeResource ControlContentThemeFontSize}" />
-                        <Setter Property="Background" Value="Transparent"/>
-                        <Setter Property="Foreground" Value="{ThemeResource SystemControlForegroundBaseHighBrush}" />
-                        <Setter Property="TabNavigation" Value="Local"/>
-                        <Setter Property="IsHoldingEnabled" Value="True"/>
-                        <Setter Property="Padding" Value="0" />
-                        <Setter Property="Margin" Value="1" />
-                        <Setter Property="BorderBrush" Value="Gray" />
-                        <Setter Property="BorderThickness" Value="0" />
-                        <Setter Property="Height" Value="50" />
-                        <Setter Property="VerticalAlignment" Value="Stretch"/>
-                        <Setter Property="VerticalContentAlignment" Value="Stretch"/>
-                        <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
-                        <Setter Property="MinWidth" Value="0"/>
-                        <Setter Property="MinHeight" Value="0"/>
-                    </Style>
-                </ListView.ItemContainerStyle>
-                <ListView.ItemTemplate>
-                    <DataTemplate x:DataType="local:ItemEntry">
-                        <Grid>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="*"/>
-                                <ColumnDefinition Width="*"/>
-                            </Grid.ColumnDefinitions>
-                            <Grid Margin="1,0">
-                                <TextBlock Text="{x:Bind Title}" FontSize="20" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="10,0,0,0" />
-                            </Grid>
-                            <Grid Grid.Column="1" Margin="1,0">
-                                <TextBlock Text="{x:Bind User}" FontSize="20" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="10,0,0,0" />
-                            </Grid>
-                        </Grid>
-                    </DataTemplate>
-                </ListView.ItemTemplate>
-            </ListView>
+            <SemanticZoom Grid.Row="1" x:Name="semanticZoom" ScrollViewer.HorizontalScrollMode="Disabled">
+                <SemanticZoom.ZoomedOutView>
+                    <ListView ItemsSource="{Binding CollectionGroups, Source={StaticResource cvsLetters}}" SelectionMode="None" MaxWidth="600" HorizontalAlignment="Center" VerticalAlignment="Center">
+                        <ListView.ItemTemplate>
+                            <DataTemplate x:DataType="local:ItemEntryGroup">
+                                <TextBlock Text="{Binding Group.Key}" FontSize="24" Foreground="{ThemeResource SystemAccentColor}" />
+                            </DataTemplate>
+                        </ListView.ItemTemplate>
+                        <ListView.ItemsPanel>
+                            <ItemsPanelTemplate>
+                                <ItemsWrapGrid Orientation="Horizontal" />
+                            </ItemsPanelTemplate>
+                        </ListView.ItemsPanel>
+                    </ListView>
+                </SemanticZoom.ZoomedOutView>
+                <SemanticZoom.ZoomedInView>
+                    <ListView x:Name="lvItems" ItemsSource="{Binding Source={StaticResource cvsLetters}}" IsItemClickEnabled="True" ItemClick="lvItems_ItemClick" RightTapped="lvItems_RightTapped" Holding="lvItems_Holding">
+                        <ListView.ItemContainerStyle>
+                            <Style TargetType="ListViewItem">
+                                <Setter Property="FontFamily" Value="{ThemeResource ContentControlThemeFontFamily}" />
+                                <Setter Property="FontSize" Value="{ThemeResource ControlContentThemeFontSize}" />
+                                <Setter Property="Background" Value="Transparent"/>
+                                <Setter Property="Foreground" Value="{ThemeResource SystemControlForegroundBaseHighBrush}" />
+                                <Setter Property="TabNavigation" Value="Local"/>
+                                <Setter Property="IsHoldingEnabled" Value="True"/>
+                                <Setter Property="Padding" Value="0" />
+                                <Setter Property="Margin" Value="1" />
+                                <Setter Property="BorderBrush" Value="Gray" />
+                                <Setter Property="BorderThickness" Value="0" />
+                                <Setter Property="Height" Value="50" />
+                                <Setter Property="VerticalAlignment" Value="Stretch"/>
+                                <Setter Property="VerticalContentAlignment" Value="Stretch"/>
+                                <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
+                                <Setter Property="MinWidth" Value="0"/>
+                                <Setter Property="MinHeight" Value="0"/>
+                            </Style>
+                        </ListView.ItemContainerStyle>
+                        <ListView.GroupStyle>
+                            <GroupStyle>
+                                <GroupStyle.HeaderContainerStyle>
+                                    <Style TargetType="ListViewHeaderItem">
+                                        <Setter Property="FontFamily" Value="{ThemeResource ContentControlThemeFontFamily}" />
+                                        <Setter Property="FontSize" Value="32" />
+                                        <Setter Property="FontWeight" Value="Medium" />
+                                        <Setter Property="Foreground" Value="{ThemeResource SystemAccentColor}" />
+                                        <Setter Property="Background" Value="Transparent" />
+                                        <Setter Property="Margin" Value="1,0,1,4"/>
+                                        <Setter Property="Padding" Value="10,8,12,0"/>
+                                        <Setter Property="HorizontalContentAlignment" Value="Left" />
+                                        <Setter Property="VerticalContentAlignment" Value="Top" />
+                                        <Setter Property="MinHeight" Value="{ThemeResource ListViewHeaderItemMinHeight}"/>
+                                        <Setter Property="UseSystemFocusVisuals" Value="True" />
+                                        <Setter Property="Template">
+                                            <Setter.Value>
+                                                <ControlTemplate TargetType="ListViewHeaderItem">
+                                                    <StackPanel Background="{TemplateBinding Background}"
+                                                                BorderBrush="{TemplateBinding BorderBrush}"
+                                                                BorderThickness="{TemplateBinding BorderThickness}">
+                                                        <ContentPresenter x:Name="ContentPresenter"
+                                                                          Margin="{TemplateBinding Padding}"
+                                                                          Content="{TemplateBinding Content}"
+                                                                          ContentTemplate="{TemplateBinding ContentTemplate}"
+                                                                          ContentTransitions="{TemplateBinding ContentTransitions}"
+                                                                          HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                                                          VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"/>
+                                                    </StackPanel>
+                                                </ControlTemplate>
+                                            </Setter.Value>
+                                        </Setter>
+                                    </Style>
+                                </GroupStyle.HeaderContainerStyle>
+                                <GroupStyle.HeaderTemplate>
+                                    <DataTemplate x:DataType="local:ItemEntryGroup">
+                                        <TextBlock Text="{Binding Key}" VerticalAlignment="Center" HorizontalAlignment="Left" />
+                                    </DataTemplate>
+                                </GroupStyle.HeaderTemplate>
+                            </GroupStyle>
+                        </ListView.GroupStyle>
+                        <ListView.ItemTemplate>
+                            <DataTemplate x:DataType="local:ItemEntry">
+                                <Grid>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="*"/>
+                                        <ColumnDefinition Width="*"/>
+                                    </Grid.ColumnDefinitions>
+                                    <Grid Margin="1,0">
+                                        <TextBlock Text="{x:Bind Title}" FontSize="20" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="10,0,0,0" />
+                                    </Grid>
+                                    <Grid Grid.Column="1" Margin="1,0">
+                                        <TextBlock Text="{x:Bind User}" FontSize="20" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="10,0,0,0" />
+                                    </Grid>
+                                </Grid>
+                            </DataTemplate>
+                        </ListView.ItemTemplate>
+                    </ListView>
+                </SemanticZoom.ZoomedInView>
+            </SemanticZoom>
         </Grid>
     </Grid>
 </Page>
