--- a/pwsafe/MainPage.xaml
+++ b/pwsafe/MainPage.xaml
@@ -127,6 +127,24 @@
     </Page.Resources>
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+        <VisualStateManager.VisualStateGroups>
+            <VisualStateGroup x:Name="ApplicationViewStates">
+                <VisualState x:Name="Landscape">
+                    <VisualState.StateTriggers>
+                        <AdaptiveTrigger MinWindowWidth="1024" />
+                    </VisualState.StateTriggers>
+                </VisualState>
+                <VisualState x:Name="Narrow">
+                    <VisualState.StateTriggers>
+                        <AdaptiveTrigger MinWindowWidth="0" />
+                    </VisualState.StateTriggers>
+                    <VisualState.Setters>
+                        <Setter Target="HeaderGrid.ColumnDefinitions[0].Width" Value="*" />
+                        <Setter Target="HeaderGrid.ColumnDefinitions[1].Width" Value="0" />
+                    </VisualState.Setters>
+                </VisualState>
+            </VisualStateGroup>
+        </VisualStateManager.VisualStateGroups>
         <ProgressRing x:Name="progressItems" HorizontalAlignment="Center" VerticalAlignment="Center" Width="70" Height="70" />
         <Grid x:Name="semanticGrid" Margin="4,4,4,0">
             <Grid.RowDefinitions>
@@ -228,18 +246,38 @@
                         </ListView.GroupStyle>
                         <ListView.ItemTemplate>
                             <DataTemplate x:DataType="local:ItemEntry">
-                                <Grid>
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="*"/>
-                                        <ColumnDefinition Width="*"/>
-                                    </Grid.ColumnDefinitions>
-                                    <Grid Margin="1,0">
-                                        <TextBlock Text="{x:Bind Title}" FontSize="20" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="10,0,0,0" />
+                                <UserControl>
+                                    <Grid x:Name="TemplateGrid">
+                                        <VisualStateManager.VisualStateGroups>
+                                            <VisualStateGroup x:Name="ApplicationViewStates">
+                                                <VisualState x:Name="Landscape">
+                                                    <VisualState.StateTriggers>
+                                                        <AdaptiveTrigger MinWindowWidth="1024" />
+                                                    </VisualState.StateTriggers>
+                                                </VisualState>
+                                                <VisualState x:Name="Narrow">
+                                                    <VisualState.StateTriggers>
+                                                        <AdaptiveTrigger MinWindowWidth="0" />
+                                                    </VisualState.StateTriggers>
+                                                    <VisualState.Setters>
+                                                        <Setter Target="TemplateGrid.ColumnDefinitions[0].Width" Value="*" />
+                                                        <Setter Target="TemplateGrid.ColumnDefinitions[1].Width" Value="0" />
+                                                    </VisualState.Setters>
+                                                </VisualState>
+                                            </VisualStateGroup>
+                                        </VisualStateManager.VisualStateGroups>
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="*"/>
+                                            <ColumnDefinition Width="*"/>
+                                        </Grid.ColumnDefinitions>
+                                        <Grid Margin="1,0">
+                                            <TextBlock Text="{x:Bind Title}" FontSize="20" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="10,0,0,0" />
+                                        </Grid>
+                                        <Grid Grid.Column="1" Margin="1,0">
+                                            <TextBlock Text="{x:Bind User}" FontSize="20" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="10,0,0,0" />
+                                        </Grid>
                                     </Grid>
-                                    <Grid Grid.Column="1" Margin="1,0">
-                                        <TextBlock Text="{x:Bind User}" FontSize="20" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="10,0,0,0" />
-                                    </Grid>
-                                </Grid>
+                                </UserControl>
                             </DataTemplate>
                         </ListView.ItemTemplate>
                     </ListView>
